Antlr-initial+print/output/Antlr1Parser.java
// $ANTLR 3.4 A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g 2012-06-25 16:45:09

import java.util.HashMap;
import java.io.BufferedWriter;
import java.io.File;
import java.io.FileWriter;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class Antlr1Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NAME", "NCNAME", "NONTERMINAL", "NUMBER", "OPTMAX", "REGEXP", "STRING", "WHITESPACE", "'\"'", "'/>'", "':'", "'<'", "'</>'", "'='", "'>'", "'['", "']'", "'include'", "'xmlns'"
    };

    public static final int EOF=-1;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int NAME=4;
    public static final int NCNAME=5;
    public static final int NONTERMINAL=6;
    public static final int NUMBER=7;
    public static final int OPTMAX=8;
    public static final int REGEXP=9;
    public static final int STRING=10;
    public static final int WHITESPACE=11;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Antlr1Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Antlr1Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return Antlr1Parser.tokenNames; }
    public String getGrammarFileName() { return "A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g"; }


    /** Map variable name to Integer object holding value */
    //HashMap memory = new HashMap();
    /*try{
    FileWriter opFile = new FileWriter("\\A:\\MyWorkspace\\Project\\Antlr\\src\\fileconversion\\ObjIntersectOfGrammar.g");
    BufferedWriter out = new BufferedWriter(opFile);
    catch[IOException e]{throws e;}*/



    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:31:1: prog : ( stat ) ;
    public final Antlr1Parser.prog_return prog() throws RecognitionException {
        Antlr1Parser.prog_return retval = new Antlr1Parser.prog_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.stat_return stat1 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:31:6: ( ( stat ) )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:31:8: ( stat )
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:31:8: ( stat )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:31:10: stat
            {
            pushFollow(FOLLOW_stat_in_prog44);
            stat1=stat();

            state._fsp--;

            adaptor.addChild(root_0, stat1.getTree());

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class stat_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:35:1: stat : includes namespaceDecls regexpDefs productions ;
    public final Antlr1Parser.stat_return stat() throws RecognitionException {
        Antlr1Parser.stat_return retval = new Antlr1Parser.stat_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.includes_return includes2 =null;

        Antlr1Parser.namespaceDecls_return namespaceDecls3 =null;

        Antlr1Parser.regexpDefs_return regexpDefs4 =null;

        Antlr1Parser.productions_return productions5 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:35:6: ( includes namespaceDecls regexpDefs productions )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:35:8: includes namespaceDecls regexpDefs productions
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_includes_in_stat85);
            includes2=includes();

            state._fsp--;

            adaptor.addChild(root_0, includes2.getTree());

            pushFollow(FOLLOW_namespaceDecls_in_stat87);
            namespaceDecls3=namespaceDecls();

            state._fsp--;

            adaptor.addChild(root_0, namespaceDecls3.getTree());

            pushFollow(FOLLOW_regexpDefs_in_stat89);
            regexpDefs4=regexpDefs();

            state._fsp--;

            adaptor.addChild(root_0, regexpDefs4.getTree());

            pushFollow(FOLLOW_productions_in_stat91);
            productions5=productions();

            state._fsp--;

            adaptor.addChild(root_0, productions5.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class includes_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "includes"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:36:1: includes : ( include )* ;
    public final Antlr1Parser.includes_return includes() throws RecognitionException {
        Antlr1Parser.includes_return retval = new Antlr1Parser.includes_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.include_return include6 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:36:9: ( ( include )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:36:13: ( include )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:36:13: ( include )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==21) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:36:13: include
            	    {
            	    pushFollow(FOLLOW_include_in_includes100);
            	    include6=include();

            	    state._fsp--;

            	    adaptor.addChild(root_0, include6.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            System.out.println((include6!=null?input.toString(include6.start,include6.stop):null)==null?"include prod-null":(include6!=null?input.toString(include6.start,include6.stop):null));

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "includes"


    public static class include_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "include"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:39:1: include : 'include' '\"' '\"' ;
    public final Antlr1Parser.include_return include() throws RecognitionException {
        Antlr1Parser.include_return retval = new Antlr1Parser.include_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal7=null;
        Token char_literal8=null;
        Token char_literal9=null;

        CommonTree string_literal7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal9_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:39:9: ( 'include' '\"' '\"' )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:39:11: 'include' '\"' '\"'
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal7=(Token)match(input,21,FOLLOW_21_in_include121); 
            string_literal7_tree = 
            (CommonTree)adaptor.create(string_literal7)
            ;
            adaptor.addChild(root_0, string_literal7_tree);


            char_literal8=(Token)match(input,12,FOLLOW_12_in_include123); 
            char_literal8_tree = 
            (CommonTree)adaptor.create(char_literal8)
            ;
            adaptor.addChild(root_0, char_literal8_tree);


            char_literal9=(Token)match(input,12,FOLLOW_12_in_include125); 
            char_literal9_tree = 
            (CommonTree)adaptor.create(char_literal9)
            ;
            adaptor.addChild(root_0, char_literal9_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "include"


    public static class namespaceDecls_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecls"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:42:1: namespaceDecls : ( namespaceDecl )* ;
    public final Antlr1Parser.namespaceDecls_return namespaceDecls() throws RecognitionException {
        Antlr1Parser.namespaceDecls_return retval = new Antlr1Parser.namespaceDecls_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.namespaceDecl_return namespaceDecl10 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:42:15: ( ( namespaceDecl )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:42:17: ( namespaceDecl )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:42:17: ( namespaceDecl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==22) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:42:17: namespaceDecl
            	    {
            	    pushFollow(FOLLOW_namespaceDecl_in_namespaceDecls133);
            	    namespaceDecl10=namespaceDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, namespaceDecl10.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecls"


    public static class namespaceDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "namespaceDecl"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:46:1: namespaceDecl : 'xmlns' '=' '\"' '\"' ;
    public final Antlr1Parser.namespaceDecl_return namespaceDecl() throws RecognitionException {
        Antlr1Parser.namespaceDecl_return retval = new Antlr1Parser.namespaceDecl_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token string_literal11=null;
        Token char_literal12=null;
        Token char_literal13=null;
        Token char_literal14=null;

        CommonTree string_literal11_tree=null;
        CommonTree char_literal12_tree=null;
        CommonTree char_literal13_tree=null;
        CommonTree char_literal14_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:46:15: ( 'xmlns' '=' '\"' '\"' )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:46:17: 'xmlns' '=' '\"' '\"'
            {
            root_0 = (CommonTree)adaptor.nil();


            string_literal11=(Token)match(input,22,FOLLOW_22_in_namespaceDecl154); 
            string_literal11_tree = 
            (CommonTree)adaptor.create(string_literal11)
            ;
            adaptor.addChild(root_0, string_literal11_tree);


            char_literal12=(Token)match(input,17,FOLLOW_17_in_namespaceDecl156); 
            char_literal12_tree = 
            (CommonTree)adaptor.create(char_literal12)
            ;
            adaptor.addChild(root_0, char_literal12_tree);


            char_literal13=(Token)match(input,12,FOLLOW_12_in_namespaceDecl158); 
            char_literal13_tree = 
            (CommonTree)adaptor.create(char_literal13)
            ;
            adaptor.addChild(root_0, char_literal13_tree);


            char_literal14=(Token)match(input,12,FOLLOW_12_in_namespaceDecl160); 
            char_literal14_tree = 
            (CommonTree)adaptor.create(char_literal14)
            ;
            adaptor.addChild(root_0, char_literal14_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "namespaceDecl"


    public static class regexpDefs_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDefs"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:49:1: regexpDefs : ( regexpDef )* ;
    public final Antlr1Parser.regexpDefs_return regexpDefs() throws RecognitionException {
        Antlr1Parser.regexpDefs_return retval = new Antlr1Parser.regexpDefs_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.regexpDef_return regexpDef15 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:49:13: ( ( regexpDef )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:49:15: ( regexpDef )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:49:15: ( regexpDef )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==REGEXP) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:49:15: regexpDef
            	    {
            	    pushFollow(FOLLOW_regexpDef_in_regexpDefs170);
            	    regexpDef15=regexpDef();

            	    state._fsp--;

            	    adaptor.addChild(root_0, regexpDef15.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            System.out.println((regexpDef15!=null?input.toString(regexpDef15.start,regexpDef15.stop):null)==null?"regexpDef-null":(regexpDef15!=null?input.toString(regexpDef15.start,regexpDef15.stop):null));

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDefs"


    public static class regexpDef_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "regexpDef"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:53:1: regexpDef : REGEXP '=' REGEXP OPTMAX ;
    public final Antlr1Parser.regexpDef_return regexpDef() throws RecognitionException {
        Antlr1Parser.regexpDef_return retval = new Antlr1Parser.regexpDef_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token REGEXP16=null;
        Token char_literal17=null;
        Token REGEXP18=null;
        Token OPTMAX19=null;

        CommonTree REGEXP16_tree=null;
        CommonTree char_literal17_tree=null;
        CommonTree REGEXP18_tree=null;
        CommonTree OPTMAX19_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:53:11: ( REGEXP '=' REGEXP OPTMAX )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:53:13: REGEXP '=' REGEXP OPTMAX
            {
            root_0 = (CommonTree)adaptor.nil();


            REGEXP16=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef202); 
            REGEXP16_tree = 
            (CommonTree)adaptor.create(REGEXP16)
            ;
            adaptor.addChild(root_0, REGEXP16_tree);


            char_literal17=(Token)match(input,17,FOLLOW_17_in_regexpDef205); 
            char_literal17_tree = 
            (CommonTree)adaptor.create(char_literal17)
            ;
            adaptor.addChild(root_0, char_literal17_tree);


            REGEXP18=(Token)match(input,REGEXP,FOLLOW_REGEXP_in_regexpDef208); 
            REGEXP18_tree = 
            (CommonTree)adaptor.create(REGEXP18)
            ;
            adaptor.addChild(root_0, REGEXP18_tree);


            OPTMAX19=(Token)match(input,OPTMAX,FOLLOW_OPTMAX_in_regexpDef214); 
            OPTMAX19_tree = 
            (CommonTree)adaptor.create(OPTMAX19)
            ;
            adaptor.addChild(root_0, OPTMAX19_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "regexpDef"


    public static class productions_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "productions"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:61:1: productions : ( production )* ;
    public final Antlr1Parser.productions_return productions() throws RecognitionException {
        Antlr1Parser.productions_return retval = new Antlr1Parser.productions_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.production_return production20 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:61:13: ( ( production )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:61:15: ( production )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:61:15: ( production )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==NONTERMINAL) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:61:15: production
            	    {
            	    pushFollow(FOLLOW_production_in_productions225);
            	    production20=production();

            	    state._fsp--;

            	    adaptor.addChild(root_0, production20.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "productions"


    public static class production_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "production"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:65:1: production : optNonterminal ':' leftItems rightItems ;
    public final Antlr1Parser.production_return production() throws RecognitionException {
        Antlr1Parser.production_return retval = new Antlr1Parser.production_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token char_literal22=null;
        Antlr1Parser.optNonterminal_return optNonterminal21 =null;

        Antlr1Parser.leftItems_return leftItems23 =null;

        Antlr1Parser.rightItems_return rightItems24 =null;


        CommonTree char_literal22_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:65:12: ( optNonterminal ':' leftItems rightItems )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:65:14: optNonterminal ':' leftItems rightItems
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_optNonterminal_in_production272);
            optNonterminal21=optNonterminal();

            state._fsp--;

            adaptor.addChild(root_0, optNonterminal21.getTree());

            char_literal22=(Token)match(input,14,FOLLOW_14_in_production274); 
            char_literal22_tree = 
            (CommonTree)adaptor.create(char_literal22)
            ;
            adaptor.addChild(root_0, char_literal22_tree);


            pushFollow(FOLLOW_leftItems_in_production276);
            leftItems23=leftItems();

            state._fsp--;

            adaptor.addChild(root_0, leftItems23.getTree());

            pushFollow(FOLLOW_rightItems_in_production278);
            rightItems24=rightItems();

            state._fsp--;

            adaptor.addChild(root_0, rightItems24.getTree());

            System.out.println((leftItems23!=null?input.toString(leftItems23.start,leftItems23.stop):null)==null?"prod leftItem-null":(leftItems23!=null?input.toString(leftItems23.start,leftItems23.stop):null));

            System.out.println((rightItems24!=null?input.toString(rightItems24.start,rightItems24.stop):null)==null?"prod righttItem-null":(rightItems24!=null?input.toString(rightItems24.start,rightItems24.stop):null));

            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "production"


    public static class optNonterminal_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "optNonterminal"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:70:1: optNonterminal : NONTERMINAL ;
    public final Antlr1Parser.optNonterminal_return optNonterminal() throws RecognitionException {
        Antlr1Parser.optNonterminal_return retval = new Antlr1Parser.optNonterminal_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Token NONTERMINAL25=null;

        CommonTree NONTERMINAL25_tree=null;

        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:70:16: ( NONTERMINAL )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:70:18: NONTERMINAL
            {
            root_0 = (CommonTree)adaptor.nil();


            NONTERMINAL25=(Token)match(input,NONTERMINAL,FOLLOW_NONTERMINAL_in_optNonterminal295); 
            NONTERMINAL25_tree = 
            (CommonTree)adaptor.create(NONTERMINAL25)
            ;
            adaptor.addChild(root_0, NONTERMINAL25_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "optNonterminal"


    public static class leftItems_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "leftItems"
    // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:73:2: leftItems : ( leftItem )* ;
    public final Antlr1Parser.leftItems_return leftItems() throws RecognitionException {
        Antlr1Parser.leftItems_return retval = new Antlr1Parser.leftItems_return();
        retval.start = input.LT(1);


        CommonTree root_0 = null;

        Antlr1Parser.leftItem_return leftItem26 =null;



        try {
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:73:12: ( ( leftItem )* )
            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:73:14: ( leftItem )*
            {
            root_0 = (CommonTree)adaptor.nil();


            // A:\\University\\Project\\antlr-examples\\Antlr1\\Antlr-initial+print\\Antlr1.g:73:14: ( leftItem )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==19) ) {
                    int LA5_1 = input.LA(2);

                    if ( (LA5_1==NONTERMINAL) ) {
                        int LA5_4 = input.LA(3);

                        if ( (LA5_4==NAME) ) {
                            int LA5_7 = input.LA(4);

                            if ( (LA5_7==20) ) {
                                alt5=1;
                            }


                        }
                        else if ( (LA5_4==12) ) {
                            int LA5_8 = input.LA(4);

                            if ( (LA5_8==STRING) ) {
                                int LA5_13 = input.LA(5);

                                if ( (LA5_13==12) ) {
                                    int LA5_16 = input.LA(6);

                                    if ( (LA5_16==20) ) {
                                        alt5=1;
                                    }


                                }


                            }


                        }


                    }
                    else if ( (LA5_1==REGEXP) ) {
                        int LA5_5 = input.LA(3);

                        if ( (LA5_5==NAME) ) {
                            int LA5_9 = input.LA(4);

                            if ( (LA5_9==20) ) {
                                alt5=1;
                            }


                        }
                        else if ( (LA5_5==12) ) {
                            int LA5_10 = input.LA(4);

                            if ( (LA5_10==STRING) ) {
                                int LA5_15 = input.LA(5);
